Make exceptions in .gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,15 @@ release/intermediate/
 # Fortran module files
 *.mod
 *.smod
+*.dll
 
 # Compiled Static libraries
 *.lai
 *.la
 *.a
+*.lib
 
 # Executables
+*.exe
 *.out
 *.app
